--- a/src/color/color.scss
+++ b/src/color/color.scss
@@ -1,11 +1,15 @@
-@use "@material/typography/mdc-typography";
-@use "@material/elevation/mdc-elevation";
+@use '../common.scss';
 
 body {
     display: grid;
-    grid-template: 1fr 200px / 2fr 2fr;
+    grid-template: 1fr 1fr 200px / 2fr 2fr;
     gap: 2rem;
     justify-items: center;
+    margin: 0;
+}
+
+header {
+    grid-column: 1/-1;
 }
 
 orange-container,
@@ -13,6 +17,7 @@ pink-container {
     width: 500px;
     height: 500px;
     border-radius: 4px;
+    margin-top: calc(64px + 2rem);
 }
 
 mwc-button {
