--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
-
+@use "@material/typography/mdc-typography";
+@use "@material/elevation/mdc-elevation";
+@use "@material/top-app-bar/mdc-top-app-bar";
 @use './common.scss';
 
